Support for scrolling down with fixed navbar on mobile design
ref: https://stackoverflow.com/questions/10155344/auto-height-div-with-overflow-and-scroll-when-needed

--- a/scss/gentest.scss
+++ b/scss/gentest.scss
@@ -1,8 +1,24 @@
+$header-dim: calc(57px + 20px);
+$main-h: calc(100% - $header-dim);
+
 body {
-    height: 700px;
+    position: relative;
+    //height: 700px;
+    height: 100vh;
+    //overflow: hidden;
+    header {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: unset;
+    }
     main {
+        position: relative;
+        //top: 7vh;
+        top: $header-dim;
         overflow-y: auto;
-        height: 1000px;
+        height: $main-h;
         .test-container {
             width: 100%;
             //height: 100%;
